--- a/theme.toml
+++ b/theme.toml
@@ -3,8 +3,8 @@ license = "MIT"
 licenselink = "https://github.com/h-enk/doks/blob/master/LICENSE"
 description = "Hugo theme helping you build modern documentation websites that are secure, fast, and SEO-ready — by default."
 
-homepage = "https://github.com/h-enk/doks"
-demosite = "https://doks.netlify.app"
+homepage = "https://tutorialinti.github.io/"
+demosite = "https://tutorialinti.github.io/"
 
 tags = ["landing page", "documentation", "blog", "minimal", "modern", "customizable", "search", "dark mode", "bootstrap"]
 features = ["security aware", "fast by default", "seo-ready", "development tools", "bootstrap framework", "netlify-ready", "full text search", "page layouts", "dark mode"]
